--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -63,7 +63,12 @@
     </ul>
   </div>
   <div class="sidebar-box">
-    <h3 class="heading">Latest Tweet</h3>
+    {% if retweeted %}
+      <h3 class="heading">Latest Retweet</h3>
+    {% else %}
+      <h3 class="heading">Latest Tweet</h3>
+    {% endif %}
+
     <blockquote class="twitter-tweet"><p lang="en" dir="ltr">{{full_text}}</p>&mdash; iRead (@iReadBot) <a href="https://twitter.com/iReadBot/status/{{tweet_id}}?ref_src=twsrc%5Etfw">March 12, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </div>
 </div>
