Add BuyMeACoffee and Ko-Fi

--- a/templates/payment/dashboard.html
+++ b/templates/payment/dashboard.html
@@ -90,10 +90,10 @@
                   <div class="col-md-6" style="margin-top: 10px;">
                     <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Sponsor Us on Ko-fi', '#8540f5', 'Y8Y320QYE');kofiwidget2.draw();</script> 
                   </div> -->
-                  <center><script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Sponsor Us on Ko-fi', '#8540f5', 'Y8Y320QYE');kofiwidget2.draw();</script> </center>
+                  <center><script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#8540f5', 'T6T23YR7C');kofiwidget2.draw();</script>  </center>
                   <br><br>
                   <center>
-                    <a href="https://www.buymeacoffee.com/ashutoshkrris"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=ashutoshkrris&button_colour=BD5FFF&font_colour=ffffff&font_family=Cookie&outline_colour=000000&coffee_colour=FFDD00" style="margin-bottom: 50px;"></a>
+                    <a href="https://www.buymeacoffee.com/ireadblog"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a book&emoji=📖&slug=ireadblog&button_colour=8540f5&font_colour=ffffff&font_family=Cookie&outline_colour=000000&coffee_colour=FFDD00" style="margin-bottom: 50px;"></a>
                   </center>
                 </div>
           </div>
@@ -105,14 +105,15 @@
 {% endblock content %}
 {% block js_down %}
 <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-  <script>
-    kofiWidgetOverlay.draw('ashutoshkrris', {
-      'type': 'floating-chat',
-      'floating-chat.donateButton.text': 'Support Us',
-      'floating-chat.donateButton.background-color': '#794bc4',
-      'floating-chat.donateButton.text-color': '#fff'
-    });
-  </script>
+<script>
+  kofiWidgetOverlay.draw('ireadblog', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support me',
+    'floating-chat.donateButton.background-color': '#8540f5',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
+  <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="ireadblog" data-description="Support me on Buy me a coffee!" data-message="Thank you for visiting. You can buy me a book if you loved the blog." data-color="#8540f5" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
   <script>
     var element = document.getElementById("sponsor")
     element.classList.add("active");
