--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="{{post.seo_overview}}" />
     <meta property="og:image" content="{{post.thumbnail.url}}" />
     {% else %}
-    <meta property="og:title" content="iRead | Where Dynamic Ideas Find You" />
+    <meta property="og:title" content="{{title}}" />
     <meta
       property="og:description"
       content="iRead is an open platform where readers find dynamic thinking, and where expert and undiscovered voices can share their writing on any topic."
