--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -82,11 +82,19 @@
               Log In
             </button>
             </center>
+            <br>
+            <center>
+            <a class="btn btn-outline-dark" href="{% url 'social:begin' 'google-oauth2' %}" role="button" style="text-transform:none">
+              <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
+              Login with Google
+            </a>
+        </center>
         </div>
         <div class="col-md-4">
             <a href="{% url 'forgot_password' %}">Forgot Password?</a>
         </div>
       </div>
+      
     </form>
   </div>
   {% include "partials/sidebar.html" %}
