--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -40,11 +40,12 @@
                   <div class="col-md-6 form-group">
                       <label for="password1">Password</label>
                       <input type="password" id="password1" name="password1" class="form-control " required>
+                      <i class="fa fa-eye toggle-password-icon" id="togglePassword1" style="cursor: pointer; top: 75%; right: 50px;"></i>
                     </div>
                   <div class="col-md-6 form-group">
                       <label for="password2">Confirm Password</label>
                       <input type="password" id="password2" name="password2" class="form-control " required>
-                    
+                      <i class="fa fa-eye toggle-password-icon" id="togglePassword2" style="cursor: pointer; top: 75%; right: 50px;"></i>
                     </div>
                     
                     </div>
