--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -137,7 +137,7 @@
                     type="text"
                     id="s"
                     name="query"
-                    placeholder="Type keyword to search..."
+                    placeholder="Type keyword and press enter to search..."
                   />
                 </form>
               </div>
