Fix Invoice and Facebook URL

--- a/templates/payment/invoice.html
+++ b/templates/payment/invoice.html
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col">
           <p class="mb-0 font-weight-bold">Billing Details</p>
-          <h5>{{name}}</h5>
+          <h5 style="margin-top: 15px;">{{name}}</h5>
           <p class="mb-9">{{email}}</p>
         </div>
         <div class="col text-right">
