Add Random Password Generator

--- a/templates/emails/password.html
+++ b/templates/emails/password.html
@@ -182,7 +182,7 @@
                                   vertical-align: baseline;
                                   white-space: pre-wrap;
                                 "
-                                >For now, we have set your temporary password as <strong>{{password}}</strong>.Please do not share this with anyone. You are requested to change your password <a href="{{link}}">here</a> as soon as you receive this email.</span>
+                                >For now, we have set your temporary password as <strong>{{password}}</strong>.<br>Please do not share this with anyone. You are requested to change your password <a href="{{link}}">here</a> as soon as you receive this email.</span>
                             </p>
 
                             <br />
