--- a/templates/core/update-post.html
+++ b/templates/core/update-post.html
@@ -100,5 +100,9 @@
       filebrowserUploadUrl: '{% url "ckeditor_upload" %}'
     });
   </script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/show-language/prism-show-language.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/copy-to-clipboard/prism-copy-to-clipboard.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/download-button/prism-download-button.js"></script>
+    
 
 {% endblock js_down %}
