--- a/templates/core/new-post.html
+++ b/templates/core/new-post.html
@@ -109,6 +109,10 @@
       filebrowserUploadUrl: '{% url "ckeditor_upload" %}'
     });
   </script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/show-language/prism-show-language.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/copy-to-clipboard/prism-copy-to-clipboard.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/download-button/prism-download-button.js"></script>
+    
   <script>
     var element = document.getElementById("new_post")
     element.classList.add("active");
