Fix Unsubscribe URL

--- a/templates/emails/bulletins.html
+++ b/templates/emails/bulletins.html
@@ -1645,7 +1645,7 @@
                           >
                             This email was sent to {{email}} |
                             <a
-                              href="{% url 'bulletin_unsubscribe' %}"
+                              href="https://iread.ga/bulletins/unsubscribe"
                               class="unsubscribelink"
                               style="
                                 box-sizing: border-box;
