Fix Category, Tag Creation and Reloading

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -68,6 +68,11 @@
       href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/toolbar/prism-toolbar.css"
+      rel="stylesheet"
+    />
+    
     <link href="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/command-line/prism-command-line.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/line-numbers/prism-line-numbers.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
@@ -76,6 +81,8 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/highlight-keywords/prism-highlight-keywords.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/command-line/prism-command-line.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/line-numbers/prism-line-numbers.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/toolbar/prism-toolbar.js"></script>
+    
     {% block js_up %}
       
     {% endblock js_up %}
