--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -36,7 +36,7 @@
   </div>
   <!-- END sidebar-box -->
 
-  <div class="sidebar-box">
+  <div class="sidebar-box" id="cat_box">
     <h3 class="heading">Categories<a id="new_cat" style="cursor: pointer;"><i class="fa fa-plus" style="float: right;" aria-hidden="true"></i></a></h3>
     <ul class="categories">
       {% for category in categories %}
@@ -52,7 +52,7 @@
   </div>
   <!-- END sidebar-box -->
 
-  <div class="sidebar-box">
+  <div class="sidebar-box" id="tag_box">
     <h3 class="heading">Tags<a id="new_tag" style="cursor: pointer;"><i class="fa fa-plus" style="float: right;" aria-hidden="true"></i></a></h3>
     <ul class="tags">
       {% for tag in tags %}
