--- a/templates/core/new-post.html
+++ b/templates/core/new-post.html
@@ -46,7 +46,7 @@
                             <select name="category" id="category" style="width: 200px;" required>
                                 <option disabled value selected>Select Category</option>
                                 {% for category in categories %}
-                                    <option value="{{category.id}}">{{category}}</option>
+                                    <option value="{{category}}">{{category}}</option>
                                 {% endfor %}
                             </select>
                         </div>
